Refactor and using compact object headers